houses complete, jobs mostly complete(need delete and edit)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           loading="lazy">
         <span class="ms-2">gregslistAsync</span>
       </a>
-      <button class="btn btn-primary" onclick="app.carsController.showCars()">Cars</button>
+      <button class="btn btn-primary me-2" onclick="app.carsController.showCars()">Cars</button>
+      <button class="btn btn-primary me-2" onclick="app.housesController.showHouses()">houses</button>
+      <button class="btn btn-primary me-2" onclick="app.jobsController.showJobs()">Jobs</button>
     </nav>
   </header>
   <main>
